# EasyWiFi

./: CMakeLists.txt  README.md
components/easy_wifi/: CMakeLists.txt  easy_wifi.c  portal.html
components/easy_wifi/inc/: easy_wifi.h
main/: main.c
